// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateReportHtml — high-risk / low score > matches saved snapshot for high-risk 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>GDPR Compliance Report — https://example.com</title>
  <style>
    * { box-sizing: border-box; }
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; max-width: 800px; margin: 0 auto; padding: 40px 20px; color: #1a1a2e; background: #fff; }
    .header { text-align: center; margin-bottom: 40px; }
    .logo { font-size: 28px; font-weight: bold; color: #4f8ef7; }
    .url { color: #666; margin-top: 4px; }
    .score-section { text-align: center; margin-bottom: 40px; }
    .score { font-size: 96px; font-weight: bold; color: #ef4444; line-height: 1; }
    .score-label { color: #666; font-size: 14px; margin-top: 4px; }
    .risk-badge { display: inline-block; background: #ef4444; color: #fff; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; margin-top: 8px; text-transform: uppercase; }
    .summary { background: #f9f9f9; padding: 20px; border-radius: 12px; margin-bottom: 30px; line-height: 1.6; }
    .section { margin-bottom: 30px; }
    .section h2 { color: #0f0f1a; border-bottom: 2px solid #4f8ef7; padding-bottom: 8px; margin-bottom: 16px; }
    .footer { margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee; color: #999; font-size: 12px; text-align: center; }
    a { color: #4f8ef7; }
    .back { display: inline-block; margin-bottom: 20px; color: #666; text-decoration: none; font-size: 14px; }
    .back:hover { color: #4f8ef7; }
  </style>
</head>
<body>
  <a href="/dashboard" class="back">← Back to Dashboard</a>
  <div class="header">
    <div class="logo">ComplyScan</div>
    <h1 style="font-size:22px;margin:12px 0 4px;">GDPR Compliance Report</h1>
    <p class="url"><a href="https://example.com" target="_blank">https://example.com</a></p>
  </div>

  <div class="score-section">
    <div class="score">20</div>
    <div class="score-label">out of 100 — GDPR Compliance Score</div>
    <div><span class="risk-badge">HIGH RISK</span></div>
  </div>

  <div class="summary">This website has basic GDPR compliance issues that should be addressed.</div>

  <div class="section">
    <h2>Automated Checks</h2>
    
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #22c55e;">
      <strong>HTTPS</strong> — PASS
      <p style="margin:4px 0 0 0;color:#666;">Site uses HTTPS</p>
      
    </div>
  
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #ef4444;">
      <strong>Privacy Policy</strong> — FAIL
      <p style="margin:4px 0 0 0;color:#666;">No privacy policy found</p>
      <p style="margin:4px 0 0 0;color:#888;font-style:italic;">Fix: Add a privacy policy page</p>
    </div>
  
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #22c55e;">
      <strong>Cookie Consent</strong> — PASS
      <p style="margin:4px 0 0 0;color:#666;">Cookie consent banner detected</p>
      
    </div>
  
  </div>

  <div class="section">
    <h2>AI-Detected Issues (3)</h2>
    
        <div style="padding:12px;margin:8px 0;border-radius:8px;background:#fef2f2;border-left:4px solid #ef4444;">
          <strong>[CRITICAL] No SSL</strong>
          <p style="margin:4px 0 0 0;color:#666;">Site is not served over HTTPS.</p>
          <p style="margin:4px 0 0 0;"><strong>Fix:</strong> Install an SSL certificate.</p>
        </div>
      
        <div style="padding:12px;margin:8px 0;border-radius:8px;background:#fef2f2;border-left:4px solid #ef4444;">
          <strong>[CRITICAL] Missing Privacy Policy</strong>
          <p style="margin:4px 0 0 0;color:#666;">No privacy policy page was found.</p>
          <p style="margin:4px 0 0 0;"><strong>Fix:</strong> Add a privacy policy page.</p>
        </div>
      
        <div style="padding:12px;margin:8px 0;border-radius:8px;background:#fef2f2;border-left:4px solid #f59e0b;">
          <strong>[WARNING] Tracking scripts found</strong>
          <p style="margin:4px 0 0 0;color:#666;">3rd-party tracking detected.</p>
          <p style="margin:4px 0 0 0;"><strong>Fix:</strong> Review and minimize tracking scripts.</p>
        </div>
      
  </div>

  <div class="footer">
    <p>Generated by ComplyScan — GDPR compliance made effortless</p>
    <p>Report generated: 31/03/2026</p>
  </div>
</body>
</html>"
`;

exports[`generateReportHtml — standard medium-risk report > matches saved snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>GDPR Compliance Report — https://example.com</title>
  <style>
    * { box-sizing: border-box; }
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; max-width: 800px; margin: 0 auto; padding: 40px 20px; color: #1a1a2e; background: #fff; }
    .header { text-align: center; margin-bottom: 40px; }
    .logo { font-size: 28px; font-weight: bold; color: #4f8ef7; }
    .url { color: #666; margin-top: 4px; }
    .score-section { text-align: center; margin-bottom: 40px; }
    .score { font-size: 96px; font-weight: bold; color: #f59e0b; line-height: 1; }
    .score-label { color: #666; font-size: 14px; margin-top: 4px; }
    .risk-badge { display: inline-block; background: #f59e0b; color: #fff; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; margin-top: 8px; text-transform: uppercase; }
    .summary { background: #f9f9f9; padding: 20px; border-radius: 12px; margin-bottom: 30px; line-height: 1.6; }
    .section { margin-bottom: 30px; }
    .section h2 { color: #0f0f1a; border-bottom: 2px solid #4f8ef7; padding-bottom: 8px; margin-bottom: 16px; }
    .footer { margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee; color: #999; font-size: 12px; text-align: center; }
    a { color: #4f8ef7; }
    .back { display: inline-block; margin-bottom: 20px; color: #666; text-decoration: none; font-size: 14px; }
    .back:hover { color: #4f8ef7; }
  </style>
</head>
<body>
  <a href="/dashboard" class="back">← Back to Dashboard</a>
  <div class="header">
    <div class="logo">ComplyScan</div>
    <h1 style="font-size:22px;margin:12px 0 4px;">GDPR Compliance Report</h1>
    <p class="url"><a href="https://example.com" target="_blank">https://example.com</a></p>
  </div>

  <div class="score-section">
    <div class="score">65</div>
    <div class="score-label">out of 100 — GDPR Compliance Score</div>
    <div><span class="risk-badge">MEDIUM RISK</span></div>
  </div>

  <div class="summary">This website has basic GDPR compliance issues that should be addressed.</div>

  <div class="section">
    <h2>Automated Checks</h2>
    
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #22c55e;">
      <strong>HTTPS</strong> — PASS
      <p style="margin:4px 0 0 0;color:#666;">Site uses HTTPS</p>
      
    </div>
  
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #ef4444;">
      <strong>Privacy Policy</strong> — FAIL
      <p style="margin:4px 0 0 0;color:#666;">No privacy policy found</p>
      <p style="margin:4px 0 0 0;color:#888;font-style:italic;">Fix: Add a privacy policy page</p>
    </div>
  
    <div style="padding:12px;margin:8px 0;border-radius:8px;background:#f5f5f5;border-left:4px solid #22c55e;">
      <strong>Cookie Consent</strong> — PASS
      <p style="margin:4px 0 0 0;color:#666;">Cookie consent banner detected</p>
      
    </div>
  
  </div>

  <div class="section">
    <h2>AI-Detected Issues (1)</h2>
    
        <div style="padding:12px;margin:8px 0;border-radius:8px;background:#fef2f2;border-left:4px solid #f59e0b;">
          <strong>[WARNING] Missing Privacy Policy</strong>
          <p style="margin:4px 0 0 0;color:#666;">No privacy policy page was found.</p>
          <p style="margin:4px 0 0 0;"><strong>Fix:</strong> Add a privacy policy page at /privacy or /privacy-policy</p>
        </div>
      
  </div>

  <div class="footer">
    <p>Generated by ComplyScan — GDPR compliance made effortless</p>
    <p>Report generated: 31/03/2026</p>
  </div>
</body>
</html>"
`;
